--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     number1 = parseFloat(prompt('Wprowadź liczbę:'));
                 }
                 let przelicznik_1 = number1 * 0.621371192;
-                document.write("Podana liczba: " + number1 + " w przeliczeniu na mile to " + przelicznik_1 + " mili / mil.");
+                document.write("Podana liczba w kilometrach: " + number1 + " w przeliczeniu na mile to " + przelicznik_1 + " mili / mil.");
                 break;
 
             case "mila":
@@ -28,7 +28,7 @@
                     number2 = parseFloat(prompt('Wprowadź liczbę:'));
                 }
                 let przelicznik_2 = number2 * 1.609344;
-                document.write("Podana liczba: " + number2 + " w przeliczeniu na kilometry to " + przelicznik_2 + " km.");
+                document.write("Podana liczba w milach: " + number2 + " w przeliczeniu na kilometry to " + przelicznik_2 + " km.");
                 break;
 
             default:
